--- a/semaine01/index.html
+++ b/semaine01/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CinéTIM - Accueil</title>
   <link rel="icon" type="image/png" href="ressources/images/favicon.png">
+  <link rel="stylesheet" href="ressources/css/styles.css">
+  <script src="ressources/js/main.js" defer></script>
 </head>
 <body>
   <header>
