Semaine 2 - Démarrage : corrections importantes aux fichiers de tests

--- a/semaine02/tests/1-requetes-media/1a-orientation-ecran.html
+++ b/semaine02/tests/1-requetes-media/1a-orientation-ecran.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>1a - Requêtes médias / ajuster le contenu l'orientation de l'écran</title>
+	<title>1a - Requêtes médias / ajuster le contenu à l'orientation de l'écran</title>
 
 	<style>
 		/* Normalisation supplémentaire 
