--- a/semaine02/tests/1-requetes-media/1c-flex-adaptatif.html
+++ b/semaine02/tests/1-requetes-media/1c-flex-adaptatif.html
@@ -16,12 +16,10 @@
 			box-sizing: border-box;
 		}
 
-		/* Styles de base pour téléphone
+		/* Styles de base pour 'mobiles'
     =============================================== */
 		html {
 			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			/*Calcul automatique de la taille de la police à la racine*/
-			font-size: clamp(14px, 0.75rem + 1vw, 22px);
 			background-color: #eed7f1;
 			color: #eed7f1;
 		}
@@ -53,9 +51,8 @@
 			color: #eed7f1;
 			border-top: 1px solid rgba(255, 255, 255, 0.3);
 			border-bottom: 1px solid rgba(60, 25, 80, 0.1);
-
 			/*
-				Effet de transition sur 1/2 seconde
+				Effet de transition.
 			*/
 
 		}
