--- a/semaine02/tests/2-typographie-adaptative/2b-typo-fluide.html
+++ b/semaine02/tests/2-typographie-adaptative/2b-typo-fluide.html
@@ -27,6 +27,7 @@
 				On a PLUS BESOIN de faire des requêtes médias pour les différentes tailles d'écrans
 				les valeurs min, calcul et max SONT à ajuster et à valider pour chaque projet
 			*/
+			font-size: clamp(0.5rem, 0.5rem + 1vw, 1.5rem);
 		}
 
 		p {
