--- a/semaine03/tests/1-images-adaptatives/1a-images-proprietes-affichage.html
+++ b/semaine03/tests/1-images-adaptatives/1a-images-proprietes-affichage.html
@@ -130,6 +130,8 @@
 				dimensions de l'image, par contre ---> l'image ne couvre pas le
 				conteneur.
 			*/
+			max-width: 100%;
+			max-height: 100%;
 		}
 
 		/* 
@@ -141,12 +143,13 @@
 			/* 
 				Utiliser object-fit pour que l'image soit contenue dans sa boîte parent 
 			*/
+			object-fit: contain;
 			
 			/* 
 				On peut aussi positionner l'image avec object-position 
         		(y revenir après l'exemple 4 plus loin) 
 			*/
-
+			object-position: bottom right;
 		}
 
 		/* 
@@ -158,6 +161,7 @@
 			/* 
 				Utiliser object-fit pour que l'image couvre le conteneur complètement sans déformation 
 			*/
+			object-fit: cover;
 		}
 
 		/* 
@@ -172,6 +176,7 @@
 				Utiliser object-position pour s'assurer que la barque blanche reste 
 				entièrement visible dans l'image (ou en tout cas le point focal de l'image)
 			*/
+			object-position: bottom left;
 		}
 
 		.btn {
