--- a/semaine03/cinetim/films.html
+++ b/semaine03/cinetim/films.html
@@ -14,6 +14,7 @@
     <nav>
       <a href="index.html">Accueil</a>
       <a href="films.html" aria-current="page">Films</a>
+      <a href="apropos.html">À propos</a>
     </nav>
   </header>
 
