--- a/semaine03/cinetim/index.html
+++ b/semaine03/cinetim/index.html
@@ -14,6 +14,7 @@
     <nav>
       <a href="index.html" aria-current="page">Accueil</a>
       <a href="films.html">Films</a>
+      <a href="apropos.html">À propos</a>
     </nav>
   </header>
 
@@ -23,27 +24,31 @@
         <p class="surtitre">Prochaine projection : 15 juin 2026</p>
         <h1>Frankenstein</h1>
         <p>Le docteur Victor Frankenstein, obsédé par son ambition, crée une créature humaine à partir de parties de cadavres. Horrifié par son invention, il l'abandonne. Seul et rejeté par la société, le monstre en quête d'amour et d'acceptation verra son désir de vengeance grandir.</p>
-        <button class="appel" id="btn-choisir">J'y serais</button>
+        <button class="appel" id="btn-choisir">
+          <span class="compteur">0</span>
+          J'y serais
+        </button>
       </div>
     </section>
 
-    <section class="grille" aria-label="Films en vedette">
-      <article class="tuile">
-        <h3>Inception</h3>
-        <p>Thriller de science-fiction réalisé par Christopher Nolan.</p>
-      </article>
-      <article class="tuile">
-        <h3>Barry Lyndon</h3>
-        <p>Chef-d'œuvre de Stanley Kubrick réputé pour sa cinématographie exceptionnelle.</p>
-      </article>
-      <article class="tuile">
-        <h3>No Country for Old Men</h3>
-        <p>Thriller criminel des frères Coen dans le désert du Texas.</p>
-      </article>
-    </section>
-    
+    <div>
+      <h1>Projections à venir</h1>
+      <section class="grille" aria-label="Films en vedette">
+        <article class="tuile">
+          <h3>Inception</h3>
+          <p>Thriller de science-fiction réalisé par Christopher Nolan.</p>
+        </article>
+        <article class="tuile">
+          <h3>Barry Lyndon</h3>
+          <p>Chef-d'œuvre de Stanley Kubrick réputé pour sa cinématographie exceptionnelle.</p>
+        </article>
+        <article class="tuile">
+          <h3>No Country for Old Men</h3>
+          <p>Thriller criminel des frères Coen dans le désert du Texas.</p>
+        </article>
+      </section>
+    </div>
   </main>
-
   <footer>
     <small>© 2026 CinéTIM</small>
   </footer>
