Intégration des images de films dans CinéTIM

--- a/semaine03/cinetim/index.html
+++ b/semaine03/cinetim/index.html
@@ -28,12 +28,15 @@
       </button>
     </section>
 
-    <div>
-      <h1>Projections à venir</h1>
-      <section class="grille" aria-label="Films en vedette">
+    <section class="vedette">
+      <h2>Projections à venir</h2>
+      <div class="grille" aria-label="Films en vedette">
         <article class="tuile">
-          <h3>Inception</h3>
-          <p>Thriller de science-fiction réalisé par Christopher Nolan.</p>
+          <figure>
+            <img src="ressources/images/films/inception.avif" alt="Vignette du film Inception">
+            <figcaption>Inception</figcaption>
+          </figure>
+          <p class="description">Thriller de science-fiction réalisé par Christopher Nolan.</p>
         </article>
         <article class="tuile">
           <h3>Barry Lyndon</h3>
@@ -43,8 +46,8 @@
           <h3>No Country for Old Men</h3>
           <p>Thriller criminel des frères Coen dans le désert du Texas.</p>
         </article>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
   <footer>
     <small>© 2026 CinéTIM</small>
