Semaine 4 : images corrigées dans CinéTIM (page Accueil seulement). Intro au layout avec grid.

--- a/semaine04/cinetim/index.html
+++ b/semaine04/cinetim/index.html
@@ -39,12 +39,18 @@
           <p class="description">Thriller de science-fiction réalisé par Christopher Nolan.</p>
         </article>
         <article class="tuile">
-          <h3>Barry Lyndon</h3>
-          <p>Chef-d'œuvre de Stanley Kubrick réputé pour sa cinématographie exceptionnelle.</p>
+          <figure>
+            <img src="ressources/images/films/barry-lyndon.jpg" alt="">
+            <figcaption>Barry Lyndon</figcaption>
+          </figure>
+          <p class="description">Chef-d'œuvre de Stanley Kubrick réputé pour sa cinématographie exceptionnelle.</p>
         </article>
         <article class="tuile">
-          <h3>No Country for Old Men</h3>
-          <p>Thriller criminel des frères Coen dans le désert du Texas.</p>
+          <figure>
+            <img src="ressources/images/films/no-country-for-old-men.jpg" alt="">
+            <figcaption>No Country for Old Men</figcaption>
+          </figure>
+          <p class="description">Thriller criminel des frères Coen dans le désert du Texas.</p>
         </article>
       </div>
     </section>
