--- a/semaine04/tests/2-grille-adaptative/2a-props-de-base.html
+++ b/semaine04/tests/2-grille-adaptative/2a-props-de-base.html
@@ -23,16 +23,23 @@
 
     /* À FAIRE: */
     .grille-3colonnes {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
       margin-bottom: 40px;
     }
 
     /* À FAIRE: */
     .grille-adaptative {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       margin-bottom: 40px;
     }
 
     /* À FAIRE: */
     .grille-2x2 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 100px 100px;
       margin-bottom: 40px;
     }
 
