Semaine 4 : CineTIM ajout de de films (vignettes seulement), ajout du fichier apropos.html, structure de la grille des films  de la page films adaptée (de la page d'accueil)

--- a/semaine04/cinetim/films.html
+++ b/semaine04/cinetim/films.html
@@ -20,30 +20,27 @@
 
   <main>
     <h1>Films proposés</h1>
-    <section class="grille">
+    <section class="grille" aria-label="Liste des films proposés">
       <article class="tuile">
-        <div class="titre-conteneur">
-          <h3>Incendies</h3>
-        </div>
-        <div class="description">
-          <p>Épopée de Denis Villeneuve révélant les secrets d'une famille marquée par la guerre civile libanaise.</p>
-        </div>
+        <figure>
+          <img src="ressources/images/films/incendies.jpg" alt="Vignette du film Incendies">
+          <figcaption>Incendies</figcaption>
+        </figure>
+        <p class="description">Épopée de Denis Villeneuve révélant les secrets d'une famille marquée par la guerre civile libanaise.</p>
       </article>
       <article class="tuile">
-        <div class="titre-conteneur">
-          <h3>Caché</h3>
-        </div>
-        <div class="description">
-          <p>Thriller psychologique de Michael Haneke sur le malaise social et la culpabilité.</p>
-        </div>
+        <figure>
+          <img src="ressources/images/films/cache.jpg" alt="Vignette du film Caché">
+          <figcaption>Caché</figcaption>
+        </figure>
+        <p class="description">Thriller psychologique de Michael Haneke sur le malaise social et la culpabilité.</p>
       </article>
       <article class="tuile">
-        <div class="titre-conteneur">
-          <h3>La Bataille d'Alger</h3>
-        </div>
-        <div class="description">
-          <p>Chef-d'œuvre politique de Gillo Pontecorvo sur la guerre d'indépendance algérienne.</p>
-        </div>
+        <figure>
+          <img src="ressources/images/films/la-bataille-d-alger.jpg" alt="Vignette du film La Bataille d'Alger">
+          <figcaption>La Bataille d'Alger</figcaption>
+        </figure>
+        <p class="description">Chef-d'œuvre politique de Gillo Pontecorvo sur la guerre d'indépendance algérienne.</p>
       </article>
     </section>
   </main>
